[gd_scene load_steps=56 format=3 uid="uid://clavodley7lll"]

[ext_resource type="Texture2D" uid="uid://byyvms5a74gpc" path="res://Free/Main Characters/Ninja Frog/Jump (32x32).png" id="1_6nddg"]
[ext_resource type="Script" path="res://Scripts/main_character.gd" id="1_ft7pr"]
[ext_resource type="Texture2D" uid="uid://bdlhq8fmxmsos" path="res://Free/Main Characters/Ninja Frog/Idle (32x32).png" id="2_bevrm"]
[ext_resource type="Texture2D" uid="uid://donkgidj02esw" path="res://Free/Main Characters/Ninja Frog/Fall (32x32).png" id="2_jpvch"]
[ext_resource type="Texture2D" uid="uid://n4py3ea2uqdc" path="res://Free/Main Characters/Ninja Frog/Run (32x32).png" id="4_btore"]
[ext_resource type="Texture2D" uid="uid://c2fma61nui2ax" path="res://Free/Main Characters/Ninja Frog/Wall Jump (32x32).png" id="7_wg7ub"]
[ext_resource type="Texture2D" uid="uid://c6xxr5ow2d4o2" path="res://Free/Main Characters/Ninja Frog/Wall Jump Custom (32x32).png" id="8_ckor7"]
[ext_resource type="Texture2D" uid="uid://58y42h3uhrij" path="res://Free/Other/Dust Particle.png" id="8_fj56v"]
[ext_resource type="Texture2D" uid="uid://dvblxsyq4b8rq" path="res://Free/Main Characters/Ninja Frog/Double Jump (32x32).png" id="8_jgale"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3mdp2"]
atlas = ExtResource("8_jgale")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a3436"]
atlas = ExtResource("8_jgale")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eyic1"]
atlas = ExtResource("8_jgale")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ejb6f"]
atlas = ExtResource("8_jgale")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8l3vk"]
atlas = ExtResource("8_jgale")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4f3bq"]
atlas = ExtResource("8_jgale")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rnwdm"]
atlas = ExtResource("2_bevrm")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wml2f"]
atlas = ExtResource("2_bevrm")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7st3v"]
atlas = ExtResource("2_bevrm")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xtrxf"]
atlas = ExtResource("2_bevrm")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_id75c"]
atlas = ExtResource("2_bevrm")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nltln"]
atlas = ExtResource("2_bevrm")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ho3uj"]
atlas = ExtResource("2_bevrm")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hpd8j"]
atlas = ExtResource("2_bevrm")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hcccd"]
atlas = ExtResource("2_bevrm")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_61nx6"]
atlas = ExtResource("2_bevrm")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qvptm"]
atlas = ExtResource("2_bevrm")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fwt01"]
atlas = ExtResource("1_6nddg")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8fxuf"]
atlas = ExtResource("4_btore")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8yqma"]
atlas = ExtResource("4_btore")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hqjh4"]
atlas = ExtResource("4_btore")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_whbgs"]
atlas = ExtResource("4_btore")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0wwj7"]
atlas = ExtResource("4_btore")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v1psk"]
atlas = ExtResource("4_btore")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8bhvx"]
atlas = ExtResource("4_btore")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kqfe4"]
atlas = ExtResource("4_btore")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2x0v1"]
atlas = ExtResource("4_btore")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s56jb"]
atlas = ExtResource("4_btore")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ge4us"]
atlas = ExtResource("4_btore")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yw4m7"]
atlas = ExtResource("4_btore")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dww4a"]
atlas = ExtResource("7_wg7ub")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jfqxv"]
atlas = ExtResource("7_wg7ub")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d8h68"]
atlas = ExtResource("7_wg7ub")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_efn6q"]
atlas = ExtResource("7_wg7ub")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_axq82"]
atlas = ExtResource("7_wg7ub")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ist2m"]
atlas = ExtResource("8_ckor7")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x67ri"]
atlas = ExtResource("8_ckor7")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8fped"]
atlas = ExtResource("8_ckor7")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_myj23"]
atlas = ExtResource("8_ckor7")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8oa07"]
atlas = ExtResource("8_ckor7")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_btjqj"]
atlas = ExtResource("8_ckor7")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c3mbb"]
atlas = ExtResource("8_ckor7")
region = Rect2(192, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_u78xe"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_jpvch")
}],
"loop": true,
"name": &"Falling",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3mdp2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a3436")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eyic1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ejb6f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8l3vk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4f3bq")
}],
"loop": true,
"name": &"Hit",
"speed": 25.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rnwdm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wml2f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7st3v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xtrxf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_id75c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nltln")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ho3uj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hpd8j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hcccd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_61nx6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qvptm")
}],
"loop": true,
"name": &"Idle",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fwt01")
}],
"loop": true,
"name": &"Jumping",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8fxuf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8yqma")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqjh4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_whbgs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0wwj7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v1psk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8bhvx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kqfe4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2x0v1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s56jb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ge4us")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yw4m7")
}],
"loop": true,
"name": &"Running",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dww4a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jfqxv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d8h68")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_efn6q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_axq82")
}],
"loop": true,
"name": &"Sliding",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ist2m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x67ri")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8fped")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_myj23")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8oa07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_btjqj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c3mbb")
}],
"loop": true,
"name": &"Wall Jumping",
"speed": 20.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_i4nwm"]
radius = 6.2
height = 17.6

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_70muk"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_twlcp"]
particle_flag_disable_z = true
gravity = Vector3(0, 98, 0)
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0

[node name="CharacterBody2D" type="CharacterBody2D"]
script = ExtResource("1_ft7pr")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -11)
scale = Vector2(3.5, 3.5)
sprite_frames = SubResource("SpriteFrames_u78xe")
animation = &"Wall Jumping"
autoplay = "Idle"
frame_progress = 0.171695

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
scale = Vector2(5, 5)
shape = SubResource("CapsuleShape2D_i4nwm")
one_way_collision = true

[node name="Camera2D" type="Camera2D" parent="."]
limit_left = -815
limit_top = -530
limit_right = 815
limit_bottom = 200
position_smoothing_speed = 5.025
editor_draw_limits = true

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
texture_filter = 1
material = SubResource("CanvasItemMaterial_70muk")
emitting = false
amount = 4
process_material = SubResource("ParticleProcessMaterial_twlcp")
texture = ExtResource("8_fj56v")

[node name="RayRight" type="RayCast2D" parent="."]
target_position = Vector2(38, 0)
collide_with_areas = true

[node name="RayLeft" type="RayCast2D" parent="."]
target_position = Vector2(-38, 0)
collide_with_areas = true

[node name="RayDown" type="RayCast2D" parent="."]
target_position = Vector2(0, 52)
collide_with_areas = true
